--- a/interior.html
+++ b/interior.html
@@ -7,14 +7,18 @@
     <link rel="stylesheet" type="text/css" href="css/reset.css">
     <link rel="stylesheet" type="text/css" href="css/site_wide.css">
     <link rel="stylesheet" type="text/css" href="css/button_actions.css">
-    <link rel="stylesheet" type="text/css" href="css/buttons.css">
     <link rel="stylesheet" type="text/css" href="css/header.css">
     <link rel="stylesheet" type="text/css" href="css/globalnav.css">
+    <link rel="stylesheet" type="text/css" href="css/entry.css">
     <link rel="stylesheet" type="text/css" href="css/templates.css">
     <link rel="stylesheet" type="text/css" href="css/landing.css">
     <link rel="stylesheet" type="text/css" href="css/heroBanner.css">
     <link rel="stylesheet" type="text/css" href="css/bbpage.css">
     <link rel="stylesheet" type="text/css" href="css/bblisting.css">
+    <link rel="stylesheet" type="text/css" href="css/shoppinglist.css">
+    <link rel="stylesheet" type="text/css" href="css/changelocation.css">
+    <link rel="stylesheet" type="text/css" href="css/itemDetail.css">
+    <link rel="stylesheet" type="text/css" href="css/helpOverlay.css">
     <link rel="stylesheet" type="text/css" href="css/footer.css">
 </head>
 
@@ -29,7 +33,7 @@
     		</div>
         </header><!--end client_header-->
         
-        <div id="shoplocal_container" class="shoplocal_container">
+        <section id="shoplocal_container" class="shoplocal_container">
             <nav class="section_GlobalNav">
                 <article class="globalNav_rowOne">
                         <div class="locationContain_globalNav">
@@ -406,7 +410,7 @@
 
             </main><!--end bodyContent-->
             
-        </div><!--end shoplocal_container-->
+        </section><!--end shoplocal_container-->
   	
          <footer id="shoplocal_footer" class="shoplocal_footer">
             <section class="clientFooter excludeFromTablet excludeFromMobile">
