--- a/itemDetail.html
+++ b/itemDetail.html
@@ -9,10 +9,16 @@
     <link rel="stylesheet" type="text/css" href="css/button_actions.css">
     <link rel="stylesheet" type="text/css" href="css/header.css">
     <link rel="stylesheet" type="text/css" href="css/globalnav.css">
+    <link rel="stylesheet" type="text/css" href="css/entry.css">
     <link rel="stylesheet" type="text/css" href="css/templates.css">
     <link rel="stylesheet" type="text/css" href="css/landing.css">
+    <link rel="stylesheet" type="text/css" href="css/heroBanner.css">
     <link rel="stylesheet" type="text/css" href="css/bbpage.css">
+    <link rel="stylesheet" type="text/css" href="css/bblisting.css">
+    <link rel="stylesheet" type="text/css" href="css/shoppinglist.css">
+    <link rel="stylesheet" type="text/css" href="css/changelocation.css">
     <link rel="stylesheet" type="text/css" href="css/itemDetail.css">
+    <link rel="stylesheet" type="text/css" href="css/helpOverlay.css">
     <link rel="stylesheet" type="text/css" href="css/footer.css">
 </head>
 
@@ -78,6 +84,7 @@
                 <div class="cb"></div>
             </section><!-- end breadcrumb-->
             
+            <main class="bodyContent">
  			<section class="containListingDetail">
             	<article class="leftColumn_IDP">
                 	<div class="IDPimageContain">
@@ -164,6 +171,8 @@
 
 			<div class="cb"></div>
             
+            </main><!--end bodyContent-->
+
           </section><!--end shoplocal_container-->
   	
          <footer id="shoplocal_footer" class="shoplocal_footer">
