Starting to create partials - header, footer, global nav

--- a/header.html
+++ b/header.html
@@ -25,7 +25,7 @@
 <body>
 	<div id="shoplocal_wrapper" class="shoplocal_wrapper"> 
 		<header class="client_header">
-    		<div>
+    		<div class="clientLogoContain">
 				<a class="clientLogo" href="http://www.Template_ShopLuxe_201301.com/">
             		<img alt="Template_Shopluxe201301 Logo" title="Template_Shopluxe201301 Logo" src="Images/_Template_ShopLuxe_sprite_LOGOS.png">
         		</a>
