--- a/herobanner.html
+++ b/herobanner.html
@@ -23,20 +23,32 @@
 </head>
 
 <body>
-    <footer id="shoplocal_footer" class="shoplocal_footer">
-        <div class="clientFooter excludeFromTablet excludeFromMobile">
-            Client's footer goes here
-        </div>
-        <div class="sl_seoFooter">
-                <p class="seoLinks">
-                    <a href="#">All Categories</a><span>&nbsp;|&nbsp;</span><a href="#">All Locations</a>
-                </p>
-                <p>Copyright Â© 1999-2015 ShopLocal, LLC. All Rights Reserved.</p>
-                <p>Use of this site constitutes acceptance of our <a href="#" class="sl_footerLink">Terms of Service</a>.</p>
-                <br>
-                <p>View our <a href="#">Privacy Notice</a> / <a href="#">Your California Privacy Rights</a>.</p>
-        </div>
-    </footer><!--end shoplocal_footer-->
+    <section id="shoplocal_container" class="shoplocal_container">
+
+         <aside class="heroBannerContain cb excludeFromMobile">
+                <div>            
+                    <div class="scrollerWrapper">
+                        <div class="heroBannerSlide">
+                            <div>
+                                <a href="#">
+                                    <img class="filler" src="">
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="slideIndicator">
+                    <a></a>
+                    <a></a>
+                    <a class="active"></a>
+                </div>  
+                    <button type="button" class="heroPrev ng-scope">Previous</button>
+                    <button type="button" class="heroNext ng-scope">Next</button>
+        </aside><!--end Hero banner-->
+
+  	<div class="cb"></div>
+        
+    </section><!--end shoplocal_container-->
 
 </body>
 </html>
