updates to header, footer, and hero banner

--- a/header.html
+++ b/header.html
@@ -23,12 +23,10 @@
 </head>
 
 <body>
-    <header class="client_header">
-        <div class="clientLogoContain">
+    <header class="client_header"> <!--begin client_header-->
             <a class="clientLogo" href="http://www.Template_ShopLuxe_201301.com/">
                 <img alt="Template_Shopluxe201301 Logo" title="Template_Shopluxe201301 Logo" src="Images/_Template_ShopLuxe_sprite_LOGOS.png">
             </a>
-        </div>
     </header><!--end client_header-->
 </body>
 </html>
