--- a/herobanner.html
+++ b/herobanner.html
@@ -23,9 +23,9 @@
 </head>
 
 <body>
-    <section id="shoplocal_container" class="shoplocal_container">
+    <section id="shoplocal_container" class="shoplocal_container"> <!--begin shoplocal_container-->
 
-         <aside class="heroBannerContain cb excludeFromMobile">
+         <aside class="heroBannerContain excludeFromMobile"> <!--begin Hero banner-->
                 <div>            
                     <div class="scrollerWrapper">
                         <div class="heroBannerSlide">
@@ -42,8 +42,8 @@
                     <a></a>
                     <a class="active"></a>
                 </div>  
-                    <button type="button" class="heroPrev ng-scope">Previous</button>
-                    <button type="button" class="heroNext ng-scope">Next</button>
+                    <button type="button" class="heroPrev">Previous</button>
+                    <button type="button" class="heroNext">Next</button>
         </aside><!--end Hero banner-->
 
   	<div class="cb"></div>
