--- a/footer.html
+++ b/footer.html
@@ -23,18 +23,17 @@
 </head>
 
 <body>
-    <footer id="shoplocal_footer" class="shoplocal_footer">
+    <footer class="shoplocal_footer"> <!--begin shoplocal_footer-->
         <div class="clientFooter excludeFromTablet excludeFromMobile">
             Client's footer goes here
         </div>
         <div class="sl_seoFooter">
-                <p class="seoLinks">
-                    <a href="#">All Categories</a><span>&nbsp;|&nbsp;</span><a href="#">All Locations</a>
-                </p>
-                <p>Copyright Â© 1999-2015 ShopLocal, LLC. All Rights Reserved.</p>
-                <p>Use of this site constitutes acceptance of our <a href="#" class="sl_footerLink">Terms of Service</a>.</p>
-                <br>
-                <p>View our <a href="#">Privacy Notice</a> / <a href="#">Your California Privacy Rights</a>.</p>
+            <p><a href="#">All Categories</a><span>&nbsp;|&nbsp;</span><a href="#">All Locations</a></p>
+            <br>
+            <p>Copyright Â© 1999-2015 ShopLocal, LLC. All Rights Reserved.</p>
+            <p>Use of this site constitutes acceptance of our <a href="#">Terms of Service</a>.</p>
+            <br>
+            <p>View our <a href="#">Privacy Notice</a> / <a href="#">Your California Privacy Rights</a>.</p>
         </div>
     </footer><!--end shoplocal_footer-->
 
