--- a/globalNav.html
+++ b/globalNav.html
@@ -23,18 +23,14 @@
 </head>
 
 <body>	
-    <section id="shoplocal_container" class="shoplocal_container">
+    <section id="shoplocal_container" class="shoplocal_container"> <!--begin shoplocal_container-->
     
-        <nav>
-            <article class="globalNav_rowOne">
+        <nav> <!--begin global nav-->
+            <div class="globalNav_rowOne">
                     <div class="locationContain_globalNav">
                         <div class="currentAd_contain">
-                            <span class="currentAd_Title">
-                                Today's Ad for
-                            </span>
-                            <address class="currentStoreInfo">
-                                1543 Caballo Road,Truth or Consequences, NM 87901
-                            </address>
+                            <span class="currentAd_Title">Today's Ad for</span>
+                            <address class="currentStoreInfo">1543 Caballo Road,Truth or Consequences, NM 87901</address>
                         </div>
                         <div>
                             <span class="excludeFromMobile">Looking for another location?</span>
@@ -42,27 +38,24 @@
                         </div>
                     </div>
                 <div class="savedDeals_globalNav">
-                    <div class="savedDeals_label">
-                        Saved deals
-                    </div>
                     <div class="favoritesListCount">2</div>
+                    <div class="savedDeals_label">Saved deals</div>
                 </div>
                 <div class="cb"></div>
-            </article>
+            </div>
             
-            <article class="globalNav_rowTwo">
+            <div class="globalNav_rowTwo">
                     <div class="containSearch">
                         <input type="text" value="Search Deals">
                         <button id="citystatezip_submit" type="submit" class="inputSearchBtn searchMagGlass posMagGlassForSearch"></button>
                     </div>
                     <div class="tabsContain">
-                        <div class="bbpTab">Browse Ad Pages</div>
-                        <div class="categoriesTab activeTab">View Categories</div>
+                        <div class="globalNavTab">Browse Ad Pages</div>
+                        <div class="globalNavTab activeTab">View Categories</div>
                     </div>
                    <div class="cb"></div>
-            </article>
-            <div class="globalNav_lineBreak"></div>
-        </nav><!--end section_GlobalNav-->
+            </div>
+        </nav><!--end global nav-->
 
     </section><!--end shoplocal_container-->
   	
