--- a/noContent.html
+++ b/noContent.html
@@ -46,16 +46,15 @@
             <section class="otherStoresBottom">
                 <span class="nearbyLabel_noContent">Or check out these other Shopluxe locations near you:</span>
                 <article class="noContent_otherStoresUnit">
-                    <div class="infoContain">
-                        <div class="noContentStoreInfo">
+                    <div class="noContentStoreInfo">
                         <span class="storeName">ShopLuxe Chicago</span>
-                        <p class="address">
+                        <p class="storeAddress">
                             6125 E. State St.
                             Rockford,
                             IL
                             61108
                         </p>
-                        <div class="phoneNumber">
+                        <div class="storePhone">
                             <a href="tel:(815) - 262-0837">
                                 (815) 262-0837
                             </a>
@@ -66,22 +65,21 @@
                     <div class="cb"></div>
                  </article>
                  <article class="noContent_otherStoresUnit">
-                    <div class="infoContain">
                     <div class="noContentStoreInfo">
                         <span class="storeName">ShopLuxe Chicago</span>
-                        <p class="address">
+                        <p class="storeAddress">
                             6125 E. State St.
                             Rockford,
                             IL
                             61108
                         </p>
-                        <div class="phoneNumber">
+                        <div class="storePhone">
                             <a href="tel:(815) - 262-0837">
                                 (815) 262-0837
                             </a>
                         </div>
                         <button type="button" class="secondaryBtn noContentButton">Make this my store</button></a>
-                     </div>
+                    </div>
                      <div class="cb"></div>
                     </article>
                 </div>  
