--- a/itemDetail.html
+++ b/itemDetail.html
@@ -25,13 +25,9 @@
 <body>
     <section id="shoplocal_container" class="shoplocal_container">
         
-       <section class="breadCrumbContain includeInMobile">
-                <a id="BreadCrumb">
-                    <span class="breadCrumbArrow"></span>
-                    <span class="breadcrumbLabel">Back</span>
-                </a> 
-            <div class="cb"></div>
-        </section><!-- end breadcrumb-->
+         <section class="breadCrumbContain includeInMobile">
+             <a id="BreadCrumb" class="breadcrumb" href="#">Back</a> 
+         </section><!-- end breadcrumb-->
         
         <main class="bodyContent">
         <section class="containListingDetail">
