--- a/listing_emailTemplate.html
+++ b/listing_emailTemplate.html
@@ -16,21 +16,21 @@
     <style>
         @media only screen and (max-width: 600px) {
             .overallTable{
-                width: 100%;
+                width: 100% !important;
 				border:none !important;
             }
             .leftcol{
 				border:none !important;
-                display: block;
-                text-align:left;
+                display: block !important;
+                text-align:left !important;
             }
             .rightcol{
-                display: block;
+                display: block !important;
             }
          	.itemImage {
-				margin-top:20px;
+				margin-top:20px !important;
 			}
-			.message {border-bottom:1px solid #ccc;
+			.message {border-bottom:1px solid #ccc !important;
 			}
         }
 
@@ -38,6 +38,7 @@
 </head>
 
 <body>
+    <center>
     <table class="overallTable" style="width:600px;font-family: Arial, sans-serif;margin:10px;" cellspacing="0" cellpadding="0">
         <tbody style="padding: 6px;font-size: 12px;color: Black;">
                 <tr>
@@ -52,18 +53,7 @@
                 </td>
             </tr>
         </tbody>
-    </table>
-    
-    <table class="overallTable" width="600" cellspacing="8" style="font-size: 12px; font-family: Arial;">
-        <tr>
-            <td>
-                <div class="message">
-                    <div style="padding: 10px;">A friend thought you might like this item from Shopluxe's weekly ad.</div>
-                </div>
-            </td>
-        </tr>
-    </table>
-    
+    </table>    
      <table class="overallTable" width="600" cellspacing="8" style="border: 1px solid #ccc; font-size: 12px; font-family: Arial; color: Black; margin: 0 10px;">
         <tbody>
             <tr>
@@ -92,7 +82,7 @@
             </tr>
         </tbody>
     </table>
-
+</center>
 
 </body>
 </html>
