--- a/shoppingList_emailTemplate.html
+++ b/shoppingList_emailTemplate.html
@@ -14,35 +14,36 @@
     <link rel="stylesheet" type="text/css" href="css/shoppinglist.css">
     <link rel="stylesheet" type="text/css" href="css/footer.css">
     <style>
-
         @media only screen and (max-width: 600px) {
-
-           .sl_list_top {
-			   margin:10px 0 0 10px;   
-           }
+            .overallTable, .sl_list_container {
+                width: 100% !important;
+                margin: 0 !important;
+            }
+            .outerDataCell {
+                padding: 20px !important;
+            }
 		   .countHolder {
-			   border-bottom:1px solid #ccc;
+			   border-bottom:1px solid #ccc !important;
 		   }
 		   .count {
-			   padding:0 10px 5px 10px;
+			   padding:0 10px 5px 10px !important;
 		   }
            .sl_imgHolder{
-                display:block;
+                display:block !important;
            }
 		   .sl_list_wrapper {
 			   border:none !important;
 		   }
 		   
            .sl_item_details{
-                display:block;
-                width:50%;
+                display:block !important;
+                width:50% !important;
 				padding-bottom:25px !important;
            }
 		   .originalDeal {
 			   margin-top:0 !important;
 		   }
         }
-
     </style>
 </head>
 
@@ -50,7 +51,7 @@
 
     <table class="overallTable" style="width: 580px; margin:10px auto;">
         <tr>
-            <td>
+            <td class="outerDataCell">
             <center style="width: 100%">
                 <table class="sl_list_container sl_list_top" style="font-family: Arial, sans-serif; font-size:12px; width: 580px; margin-bottom:20px; background-color: #FFF;">
                     <tbody>
@@ -76,7 +77,7 @@
                             </td>
                         </tr>
                     </table>
-                    <table class="sl_list_wrapper" style="width: 580px; border:1px solid #ccc; padding:5px;">
+                    <table class="sl_list_wrapper" style="width: 100%; border:1px solid #ccc;">
                     <tr>
                         <td>
 
