landing page updates

--- a/landing.html
+++ b/landing.html
@@ -48,7 +48,7 @@
               <div class="cb"></div>
                             
               <section id="GridContain">
-                    <div class="firstTemplate">
+                    <article class="firstTemplate">
                       <div class="landingTemplate_LSSI cb">
                        <div class="largeBlock">
                           <div class="offerCount">
@@ -103,7 +103,133 @@
                       </h2>
                   </div>
                   </div>
-              </div>
+              </article>
+              <article class="secondTemplate">
+                  <div class="landingTemplate_LSSI cb">
+                       <div class="largeBlock">
+                            <div class="textInfo">
+                                <h2>
+                                    Weekly Specials 5/25
+                                </h2>
+                                 <div class="offerCount">
+                                  <p class="countNumber">60</p>
+                                  <p>DEALS</p>
+                      			</div>
+                            </div>
+                            <div class="imageContain">
+                                <img src="http://akimages.shoplocal.com/dyn_rppi/420.0.80.0/HomeDepot/large/0001_STA052514_bP1_h4lz0.jpg">
+                            </div>
+                        </div>
+                      <div class="ss_holder">
+                      <div class="topBlock">
+                          <div class="smallBlock smallListingBlock" ng-click="openItemDetail(item.ID)">
+                            <div class="containText">
+                                <div class="dealInblock">
+                                    20-40% Off
+                                </div>
+                                <div class="titleInBlock">
+                                    Men's Shirts
+                                </div> 
+                                <div class="additionalDealTablet">
+                                    <div class="addDealInBlock">
+                                        additional deal information
+                                    </div>
+                                </div>
+                                <div class="hoursRemaining">
+                                    <div>
+                                        <span class="countdownTime">4 <span class="countdownText">DAYS LEFT</span></span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="imageContain">
+                                <img src="http://akimages.shoplocal.com/dyn_li/420.0.88.0/retailers\kohls\category_images\hp-hp-equity1-20140825-nav04.jpg" />
+                            </div>
+                        </div>
+                      </div>
+                          <div class="smallBlock">
+                              <div class="offerCount">
+                                   <p class="countNumber">10</p>
+                                   <p>DEALS</p>
+                              </div>
+                              <div class="imageContain">
+                                  <img src="http://akimages.shoplocal.com/dyn_li/400.0.90.0/Retailers/Kohls/150118_02AD_3a.jpg" />
+                              </div>
+                              <h2>
+                                  Automotive
+                              </h2>
+                          </div>
+                  </div>
+                   <div class="tallBlock" ng-click="goToCategoryDetailedView(item.ElementTypeID, item.ID)" style="position:relative;">
+                      <div class="offerCount">
+                              <p class="countNumber">6</p>
+                              <p>DEALS</p>
+                      </div>
+                      <div class="imageContain">
+                          <img src="http://akimages.shoplocal.com/dyn_li/400.0.90.0/Retailers/Kohls/150118_02AD_3a.jpg" />
+                      </div>
+                      <h2>
+                          Kitchen
+                      </h2>
+                  </div>
+                  </div>
+              </article>
+              <article class="thirdTemplate">
+               <div class="landingTemplate_SWS cb">
+                    <div class="firstMod topBlock"> 
+                          <div class="smallBlock">
+                              <div class="offerCount">
+                                   <p class="countNumber">10</p>
+                                   <p>DEALS</p>
+                              </div>
+                              <div class="imageContain">
+                                  <img src="http://akimages.shoplocal.com/dyn_li/400.0.90.0/Retailers/Kohls/150118_02AD_3a.jpg" />
+                              </div>
+                              <h2>
+                                  Automotive
+                              </h2>
+                          </div>
+                	</div>
+                    <div class="firstMod topBlock"> 
+                        <div class="wideBlock wideListingBlock">
+                            <div class="containText">
+                                <div class="dealInblock">
+                                    20-40% Off
+                                </div>
+                                <div class="titleInBlock">
+                                    Men's Shirts
+                                </div> 
+                                <div class="additionalDealTablet">
+                                	<div class="addDealInBlock">
+                                    	additional deal information
+                                	</div>
+                                </div>
+                                <div class="hoursRemaining">
+                                    <div>
+                                        <span class="countdownTime">4 <span class="countdownText">DAYS LEFT</span></span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="imageContain">
+                                <img src="http://akimages.shoplocal.com/dyn_li/420.0.88.0/retailers\kohls\category_images\hp-hp-equity1-20140825-nav04.jpg" />
+                            </div>
+                        </div>
+                    </div>
+                    <div class="firstMod topBlock"> 
+                          <div class="smallBlock">
+                              <div class="offerCount">
+                                   <p class="countNumber">10</p>
+                                   <p>DEALS</p>
+                              </div>
+                              <div class="imageContain">
+                                  <img src="http://akimages.shoplocal.com/dyn_li/400.0.90.0/Retailers/Kohls/150118_02AD_3a.jpg" />
+                              </div>
+                              <h2>
+                                  Automotive
+                              </h2>
+                          </div>
+                    </div>
+                </div>
+              </article>
        	</section><!-- end GridContain-->
         
         <div class="cb"></div>
