--- a/Fullscreen.html
+++ b/Fullscreen.html
@@ -32,30 +32,30 @@
                   Valid Jan 15 - Jan 25 (except as noted)
             </div>
      
-            <div class="containPageSortOptions">                        
-                  <div class="activePageSortOption">
-                     Page 1 of 23
-                  </div>
-                  <div class="pageDropdownOptions">
-                      <div class="pageSortOption">
-                         Page 1 of 23
-                      </div>
-                      <div class="pageSortOption">
-                         Page 2 of 23
-                      </div>
-                      <div class="pageSortOption">
-                         Page 3 of 23
-                      </div>
-                      <div class="pageSortOption">
-                         Page 4 of 23
-                      </div>
-                      <div class="pageSortOption">
-                         Page 5 of 23
-                      </div>
-                      <div class="pageSortOption">
-                         Page 6 of 23
-                      </div>
-                  </div>
+            <div class="containPageDropdown">     
+                <div class="activePageSortOption">
+                   Page 1 of 23
+                </div>
+                <div class="pageDropdownOptions">
+                    <div class="pageSortOption">
+                       Page 1 of 23
+                    </div>
+                    <div class="pageSortOption">
+                       Page 2 of 23
+                    </div>
+                    <div class="pageSortOption">
+                       Page 3 of 23
+                    </div>
+                    <div class="pageSortOption">
+                       Page 4 of 23
+                    </div>
+                    <div class="pageSortOption">
+                       Page 5 of 23
+                    </div>
+                    <div class="pageSortOption">
+                       Page 6 of 23
+                    </div>
+                </div>
             </div>
             
             <div class="pageContolContain"> 
