cleanup flexbox and landing page

--- a/helpOverlay.html
+++ b/helpOverlay.html
@@ -57,22 +57,15 @@
                 <div class="unit4_graphics">
                     <div class="unit4_arrow"></div>
                     <div class="unit4_line"></div> 
-                </div>                
-            </article>
+                </div>    
+            </article>            
             <article class="ob_Unit5 instructUser">
-                <div class="ob_text1">See a specific type of item</div>  
-                <div class="unit5_graphics">
-                    <div class="unit5_arrow"></div>
-                    <div class="unit5_line"></div> 
-                </div> 
-            </article>
-            <article class="ob_Unit6 instructUser">
                 <div class="ob_text1">
                     <div class="ob_unitTitle">Browse deals</div>
                     See a collection of all deals near you
                 </div> 
             </article>
-            <article class="ob_Unit7">
+            <article class="ob_Unit6">
                 <div class="posCloseTextonOnBoarding">Click anywhere to begin</div>
                 <div class="skinCloseOverlayBtn posCloseOnBoarding"></div>  
             </article>
@@ -134,7 +127,7 @@
               
               <div class="cb"></div>
                             
-              <section id="GridContain">
+                           <section id="GridContain">
                     <article class="firstTemplate">
                       <div class="landingTemplate_LSSI cb">
                        <div class="largeBlock">
@@ -217,15 +210,11 @@
                                 <div class="titleInBlock">
                                     Men's Shirts
                                 </div> 
-                                <div class="additionalDealTablet">
-                                    <div class="addDealInBlock">
+                                <div class="addDealInBlock excludeFromTablet excludeFromMobile">
                                         additional deal information
-                                    </div>
                                 </div>
                                 <div class="hoursRemaining">
-                                    <div>
-                                        <span class="countdownTime">4 <span class="countdownText">DAYS LEFT</span></span>
-                                    </div>
+                                     <span class="countdownTime">4 <span class="countdownText">DAYS LEFT</span></span>
                                 </div>
                             </div>
                             <div class="imageContain">
@@ -282,18 +271,17 @@
                                 <div class="dealInblock">
                                     20-40% Off
                                 </div>
+                                <div class="pqInBlock">
+                                	each
+                                </div>
                                 <div class="titleInBlock">
                                     Men's Shirts
                                 </div> 
-                                <div class="additionalDealTablet">
-                                	<div class="addDealInBlock">
-                                    	additional deal information
-                                	</div>
+                                <div class="addDealInBlock excludeFromTablet excludeFromMobile">
+                                    additional deal information
                                 </div>
                                 <div class="hoursRemaining">
-                                    <div>
-                                        <span class="countdownTime">4 <span class="countdownText">DAYS LEFT</span></span>
-                                    </div>
+                                    <span class="countdownTime">4 <span class="countdownText">DAYS LEFT</span></span>
                                 </div>
                             </div>
                             <div class="imageContain">
