--- a/landing.html
+++ b/landing.html
@@ -130,10 +130,8 @@
                                 <div class="titleInBlock">
                                     Men's Shirts
                                 </div> 
-                                <div class="additionalDealTablet">
-                                    <div class="addDealInBlock">
+                                <div class="addDealInBlock excludeFromTablet excludeFromMobile">
                                         additional deal information
-                                    </div>
                                 </div>
                                 <div class="hoursRemaining">
                                      <span class="countdownTime">4 <span class="countdownText">DAYS LEFT</span></span>
@@ -193,13 +191,14 @@
                                 <div class="dealInblock">
                                     20-40% Off
                                 </div>
+                                <div class="pqInBlock">
+                                	each
+                                </div>
                                 <div class="titleInBlock">
                                     Men's Shirts
                                 </div> 
-                                <div class="additionalDealTablet">
-                                	<div class="addDealInBlock">
-                                    	additional deal information
-                                	</div>
+                                <div class="addDealInBlock excludeFromTablet excludeFromMobile">
+                                    additional deal information
                                 </div>
                                 <div class="hoursRemaining">
                                     <span class="countdownTime">4 <span class="countdownText">DAYS LEFT</span></span>
