--- a/Fullscreen.html
+++ b/Fullscreen.html
@@ -32,7 +32,7 @@
                   Valid Jan 15 - Jan 25 (except as noted)
             </div>
      
-            <div class="containPageDropdown">     
+             <div class="containPageSortOptions">     
                 <div class="activePageSortOption">
                    Page 1 of 23
                 </div>
